//
// Copyright (C) 2024 EA group inc.
// Author: Jeff.li lijippy@163.com
// All rights reserved.
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published
// by the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.
//
//


syntax="proto2";
package proto;

enum CompressType {
    CompressTypeNone = 0;
    CompressTypeGzip = 1;
    CompressTypeZlib = 2;
    CompressTypeSnappy = 3;
    CompressTypeLZ4 = 4;
}

message Misc {
  required CompressType required_enum = 1;
  optional CompressType optional_enum = 2;
  repeated CompressType repeated_enum = 3;
  required uint64 required_uint64 = 4;
  optional uint64 optional_uint64 = 5;
  repeated uint64 repeated_uint64 = 6;
  required string required_string = 7;
  optional string optional_string = 8;
  repeated string repeated_string = 9;
  required bool required_bool = 10;
  optional bool optional_bool = 11;
  repeated bool repeated_bool = 12;
  required int32 required_int32 = 13;
  optional int32 optional_int32 = 14;
  repeated int32 repeated_int32 = 15;
}
